--- a/themes/vue/layout/partials/ad.ejs
+++ b/themes/vue/layout/partials/ad.ejs
@@ -1,8 +1,11 @@
 <div id="ad">
   <span style="float: right;">广告</span>
-  <a href="https://time.geekbang.org/course/intro/163?code=Cs1WwK3tTrzMwGm1q-0VySZ9DhJaB-pOIkESucJlfHc%3D&utm_term=SPoster" target="_blank" rel="noopener">
-    <img src="/images/geekbang-ad.jpg">
+  <a href="https://ke.qq.com/course/392130?saleToken=992600&from=pclink" target="_blank" rel="noopener">
+    <img src="/images/tencent-ad.png">
   </a>
+  <!-- <a href="https://time.geekbang.org/course/intro/163?code=Cs1WwK3tTrzMwGm1q-0VySZ9DhJaB-pOIkESucJlfHc%3D&utm_term=SPoster" target="_blank" rel="noopener">
+    <img src="/images/geekbang-ad.jpg">
+  </a> -->
   <!-- <script
     async
     type="text/javascript"
