--- a/themes/vue/layout/partials/learn_dropdown.ejs
+++ b/themes/vue/layout/partials/learn_dropdown.ejs
@@ -15,6 +15,7 @@
     <li>
       <ul>
         <li><a href="https://www.vuemastery.com/courses/" class="nav-link" target="_blank">Vue Mastery (英文)</a></li>
+        <li><a href="https://vueschool.io/?friend=vuejs&utm_source=Vuejs.org&utm_medium=Link&utm_content=Navbar%20Dropdown" class="nav-link" target="_blank">Vue School (英文)</a></li>
       </ul>
     </li>
   </ul>
