Improve text accessibility (#1666)
This patch makes a few changes:

- Alter the "light" text colour so that it is WCAG AAA compliant for
  legibility.
- Adjust code colours to be at least WCAG AA compliant.
- Darken the "medium" and "dark" colours, so as to preserve significance
  of different shades
- Make text use the font-size set by the browser so users with visual
  impairment can choose their own size, rather than hardcoding 15px and
  forcing people to zoom. Most browsers default to 16px, in my
  understanding. Also adjust the max-width of the body, to account for
  the increased font-size and prevent aggressive line wrapping.
- Adjust some of the site meta tags to allow scaling on mobile

--- a/themes/vue/source/css/_common.styl
+++ b/themes/vue/source/css/_common.styl
@@ -37,7 +37,7 @@ code, pre
   -moz-osx-font-smoothing: initial
 
 code
-  color: #e96900
+  color: #d63200
   padding: 3px 5px
   margin: 0 2px
   border-radius: 2px
@@ -130,7 +130,6 @@ input.button
       border-top: 1px solid #eee
     a
       color: lighten($dark, 10%)
-      font-size: .9em
       display: block
       &:hover
         color: $green
@@ -144,7 +143,7 @@ input.button
     height: 0
     border-left: 4px solid transparent
     border-right: 4px solid transparent
-    border-top: 5px solid #ccc
+    border-top: 5px solid $light
 
 sup.beta.beta
   font-size: .6em
